--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Acosta Tomas",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.14.1"
   }
 }
